# untron-frontend-exp

./: .gitignore  Cargo.toml  README.md  index.html  package.json  tailwind.config.js
src/: lib.rs  main.rs
src/components/: currency_input.rs  faq_accordion.rs  footer.rs  header.rs  mod.rs
src/config/: faq_accordion.rs  footer.rs  mod.rs
src/pages/: home.rs
src/utils/: units.rs
styles/: globals.css
