[package]
name = "untron-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["csr"] }
leptos_icons = "0.6.1"
leptos_meta = "0.8.2"
leptos_router = "0.8.2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "EventTarget", "Navigator", "Clipboard", "Window"] }
# Added for HTTP requests in WASM
wasm-bindgen-futures = "0.4"
gloo-net = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
